<resources>
    <string name="app_name">Weather\nNotifier</string>
    <string name="action_settings">Settings</string>
    <string name="monitor_fragment">UV Monitor</string>
    <string name="set_alarm_time">Set Alarm Time</string>
    <string name="define_locations">Locations list</string>
    <string name="set_update_time">Set update time</string>

    <string-array name="update_times">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>

    <string-array name="cloth">
        <item>Cloth A</item>
        <item>Cloth B</item>
        <item>Cloth C</item>
    </string-array>

    <array name="update_times_millis">
        <item>600000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>10800000</item>
        <item>86400000</item>
    </array>


    <string name="settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="address_found">address found</string>
    <string name="no_address_found">no address found</string>
    <string name="no_geocoder_available">no geocoder available</string>
    <string name="title_activity_define_location">Map</string>
    <string name="remove">Remove</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="uv_index">UV Index:</string>
    <string name="uv">Feels like:</string>
    <string name="precipitation">Precipitation:</string>
    <string name="real_temprature">Temprature:</string>
    <string name="humidity">Humidity:</string>
    <string name="title_activity_weather_update">Weather update</string>
    <string name="done">Done</string>
    <string name="locating">Locating…</string>
    <string name="precipitation_probability">Precipitation:</string>



    //Settings
    <string name="characteristic">Characteristic</string>
    <string name="skin_color">Skin Color</string>
    <string name="Eyes_color">Eyes Color</string>
    <string name="weight">Weight [kg]</string>
    <string name="age_text">Age</string>

    <string name="forecast_updates">Forecast Updates</string>
    <string name="time_interval">Time Interval [hours]</string>

    <string name="tracking_list">Tracking List</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="option_wind">Wind</string>
    <string name="option_temperature">Temperature</string>
    <string name="option_rain">Rain</string>
    <string name="option_uv">UV</string>
    <string name="option_humidity">Humidity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_an_address">Search for an address</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="alarm_demo">Alarm demo</string>
    <string name="update_demo">Update demo</string>
    <string name="recommendation_text"><u>Wear recommendation</u></string>
</resources>
